# OHIP-MCEDT-SOAP-Python-Example

./: .breakpoints  generatedrequest.xml  main.py  pyproject.toml  replit.nix  samplerequest.xml
